--- a/src/style/App.less
+++ b/src/style/App.less
@@ -1,4 +1,6 @@
-/** This is the color scheme for the page*/
+/** These are global style settings */
+//noinspection CssUnknownTarget
+@import (css) url("https://fonts.googleapis.com/css?family=Lato");
 @deepgreen: #0d1e06;
 @intensivered: #6d1127;
 @richgold: #e8b910;
@@ -6,3 +8,7 @@
 @activenav: #ffd84d;
 @linkedel: #ba825f;
 @flowerred: #8C151D;
+
+body {
+  font-family: 'Lato', sans-serif !important;
+}
