--- a/src/style/App.less
+++ b/src/style/App.less
@@ -6,7 +6,7 @@
 @richgold: #e8b910;
 @woodbrown: #664510;
 @activenav: #ffd84d;
-@linkedel: #ba825f;
+@linkedel: #9C6E51;
 @flowerred: #8C151D;
 
 body {
