finished How we met section removed unused files, changed some colors.

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -8,6 +8,7 @@
 @activenav: #ffd84d;
 @linkedel: #9C6E51;
 @flowerred: #8C151D;
+@background-white: #C4C4C4;
 
 body {
   font-family: 'Lato', sans-serif !important;
