--- a/src/style/App.less
+++ b/src/style/App.less
@@ -1,14 +1,14 @@
 /** These are global style settings */
 //noinspection CssUnknownTarget
 @import (css) url("https://fonts.googleapis.com/css?family=Lato");
-@deepgreen: #0d1e06;
+@background-color: rgba(240, 255, 191, 0.75);
 @intensivered: #6d1127;
-@richgold: #e8b910;
-@woodbrown: #664510;
-@activenav: #ffd84d;
+@greenfont: #006650;
+@woodbrown: #4f3c08;
+@activenav: #04114f;
 @linkedel: #9C6E51;
 @flowerred: #8C151D;
-@background-white: #C4C4C4;
+@background-white: rgba(240, 255, 191, 0.75);
 
 body {
   font-family: 'Lato', sans-serif !important;
