--- a/src/style/App.less
+++ b/src/style/App.less
@@ -3,7 +3,7 @@
 @import (css) url("https://fonts.googleapis.com/css?family=Lato");
 @background-color: rgba(240, 255, 191, 0.75);
 @intensivered: #6d1127;
-@greenfont: #006650;
+@fontcolor: #b09259;
 @woodbrown: #4f3c08;
 @activenav: #04114f;
 @linkedel: #9C6E51;
@@ -11,5 +11,5 @@
 @background-white: rgba(240, 255, 191, 0.75);
 
 body {
-  font-family: 'Lato', sans-serif !important;
+  font: normal normal bold 20px/1.4em brandon-grot-w01-light,sans-serif
 }
