fixed about part

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -2,6 +2,8 @@
 //noinspection CssUnknownTarget
 @import (css) url("https://fonts.googleapis.com/css?family=Lato");
 @background-color: rgba(240, 255, 191, 0.75);
+@background-color-components: white;
+@image-background-color: #ebdfc7;
 @intensivered: #6d1127;
 @fontcolor: #b09259;
 @woodbrown: #4f3c08;
@@ -11,5 +13,6 @@
 @background-white: rgba(240, 255, 191, 0.75);
 
 body {
-  font: normal normal bold 20px/1.4em brandon-grot-w01-light,sans-serif
+  font: normal normal bold 20px/1.4em brandon-grot-w01-light,sans-serif;
+  letter-spacing: 5px;
 }
