home page completed, working on rsvp

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -10,6 +10,9 @@
 @activenav: #04114f;
 @linkedel: #9C6E51;
 @flowerred: #8C151D;
+@selectedlink: #8ab681;
+@visitedlink: #549061;
+@alternative-background-color-components: #ebdfc7;
 @background-white: rgba(240, 255, 191, 0.75);
 
 body {
